[gd_scene load_steps=18 format=3 uid="uid://dlyrwgmg3ve6g"]

[ext_resource type="Script" path="res://Scripts/Programs/Hands/quantum_grapple.gd" id="1_pujic"]
[ext_resource type="Texture2D" uid="uid://cbr2rnrdjtll5" path="res://Sprites/Programs/programs_icon.png" id="2_kwq0i"]
[ext_resource type="FontFile" uid="uid://dxr68c8ej2ev0" path="res://Sprites/Fonts/LowresPixel-Regular.otf" id="3_rephm"]
[ext_resource type="Shader" path="res://Shaders/darken.gdshader" id="4_mem5f"]
[ext_resource type="Texture2D" uid="uid://cw2sa6dpe3kv6" path="res://Sprites/UI/UI_Icons.png" id="4_utrvh"]
[ext_resource type="AudioStream" uid="uid://byuxfnojgpaqw" path="res://Sounds/FX/grapple.wav" id="5_4wop5"]
[ext_resource type="AudioStream" uid="uid://cgb3vwy651e1g" path="res://Sounds/FX/hook.wav" id="6_3ve4e"]
[ext_resource type="Script" path="res://Scripts/UI/program_button_label.gd" id="6_8gtwm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fa7u1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d8wwc"]
atlas = ExtResource("2_kwq0i")
region = Rect2(1, 195, 30, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3455"]
atlas = ExtResource("2_kwq0i")
region = Rect2(4, 484, 56, 56)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e8dut"]
shader = ExtResource("4_mem5f")
shader_parameter/darken = false

[sub_resource type="AtlasTexture" id="AtlasTexture_l12na"]
atlas = ExtResource("2_kwq0i")
region = Rect2(131, 483, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnqee"]
atlas = ExtResource("4_utrvh")
region = Rect2(144, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ng2f"]
atlas = ExtResource("4_utrvh")
region = Rect2(160, 192, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_e62a2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnqee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ng2f")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jq3u0"]
atlas = ExtResource("2_kwq0i")
region = Rect2(10, 490, 42, 35)

[node name="QuantumGrapple" type="Area2D"]
collision_layer = 256
collision_mask = 0
monitorable = false
script = ExtResource("1_pujic")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_fa7u1")

[node name="TileSprite" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_d8wwc")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.571, 0.571)
texture = SubResource("AtlasTexture_d3455")

[node name="Label" type="Label" parent="Sprite2D"]
offset_left = -23.0
offset_top = 16.0
offset_right = 207.0
offset_bottom = 66.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("3_rephm")
theme_override_font_sizes/font_size = 28
text = "Quantum Grapple"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadedSprite" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_e8dut")
scale = Vector2(0.761, 0.761)
texture = SubResource("AtlasTexture_l12na")

[node name="Button" type="AnimatedSprite2D" parent="LoadedSprite"]
use_parent_material = true
position = Vector2(0, 18)
sprite_frames = SubResource("SpriteFrames_e62a2")

[node name="Label" type="Label" parent="LoadedSprite/Button"]
offset_left = -11.0
offset_top = -6.0
offset_right = 97.0
offset_bottom = 65.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.372549, 0.803922, 0.894118, 1)
theme_override_fonts/font = ExtResource("3_rephm")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_8gtwm")
slot = "RightHand"

[node name="FileSprite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.761, 0.761)
texture = SubResource("AtlasTexture_jq3u0")

[node name="GrappleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_4wop5")
bus = &"FX"

[node name="TipSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3ve4e")
pitch_scale = 0.4
bus = &"FX"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="tree_entered" from="LoadedSprite/Button/Label" to="LoadedSprite/Button/Label" method="_on_tree_entered"]
